* . (svn:ignore): Ignore generated files. 	* common.css: Fix the .code class, lest it make the C# Language Spec 	  examples unreadable.  (Really, *really*, unreadable.) 	* Makefile.am: Deal with change to mono-tools/webdoc directory... 	* monodoc.ashx: Grab CSS & JavaScript code from the node's 	  HelpSource, thus allowing the HelpSource to customize output.
svn path=/trunk/mono-tools/; revision=117307

--- a/webdoc/common.css
+++ b/webdoc/common.css
@@ -137,12 +137,8 @@ img {
 }
 
 .code {
-	margin:15px;
-	padding:15px;
 	font-size: small;
 	font-family: "Courier New", Courier;
-	background:whitesmoke;
-	border: solid 1px silver;
 	line-height:110%;
 }
 
